# version is one sourced from __init__

[metadata]
name = robo-utils
version = attr: roboutils.__version__ 
author = Mike Knerr
#author_email = name@domain.com
description =  Useful functions for mobile robotics
long_description = file: README.md
#long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
# pypi index project page needs this vers of homepage
home_page = https://github.com/mkner/robo-utils
readme = README.md
keywords = robotics, mobile robotics, utilities,functions,toolkit
#keywords = python, packages
license =   MIT
classifiers = 
   Programming Language :: Python :: 3
   License :: OSI Approved :: MIT License
   Operating System :: OS Independent
   
[options]
packages = find:
#install_requires =
#    robo-base >= 0.1.3

[options.packages.find]
include = roboutils*



